Fix custom scrollbar hovering UI bug

--- a/packages/home/frontend/components/commercetools-ui/organisms/products/product-list/styles/index.module.css
+++ b/packages/home/frontend/components/commercetools-ui/organisms/products/product-list/styles/index.module.css
@@ -16,4 +16,5 @@
 }
 .desktop_facet_container::-webkit-scrollbar-thumb:hover {
   background: #bbb9b9;
+  background-clip: padding-box;
 }
